test/scc/ext/tm/semantic-errors/010.t
volatile int* foo() _Transaction_safe
{
    return 0;
}

void test()
{
    _Atomic
        *foo() = 2;
}